install/certdir/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings
  labels:
    app: ratings
    service: ratings
    app.kubernetes.io/component: controller
spec:
  ports:
  - port: 8443
    name: https
    targetPort: 443
  selector:
    app: ratings
    app.kubernetes.io/component: controller
