install/certdir/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: my-tls-secret # must be the same as secret
    hosts:
    - hyperdata.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "hyperdata.com"
  gateways:
  - mygateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - hyperdata.com
    route:
    - destination:
        host: hyperdata-controller.hyperdata.svc.cluster.local
